tests/baselines/reference/nodeModulesCJSEmit1.errors.txt
/3.cjs(1,8): error TS2307: Cannot find module 'foo' or its corresponding type declarations.
/3.cjs(2,1): error TS2304: Cannot find name 'exports'.
/5.cjs(2,8): error TS1192: Module '"/3"' has no default export.


==== /1.cjs (0 errors) ====
    module.exports = {};
    
==== /2.cjs (0 errors) ====
    exports.foo = 0;
    
==== /3.cjs (2 errors) ====
    import "foo";
           ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    exports.foo = {};
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
==== /4.cjs (0 errors) ====
    ;
    
==== /5.cjs (1 errors) ====
    import two from "./2.cjs";   // ok
    import three from "./3.cjs"; // error
           ~~~~~
!!! error TS1192: Module '"/3"' has no default export.
    two.foo;
    three.foo;
    